# AuraProject

./: .gitignore  LICENSE  README.md
client/: .gitattributes  CMakeSettings.json
client/src/: CMakeLists.txt  main.cpp
client/src/client/: animator.h  client.cpp  client.h  const.h  creature.cpp  effect.cpp  game.cpp  map.cpp  spritemanager.cpp  statictext.cpp  thingtype.cpp  thingtype.h  tile.cpp
client/src/framework/: pch.h
client/src/framework/core/: GraphicalApplicationContext.h  application.cpp  application.h  applicationcontext.h  consoleapplication.cpp  consoleapplication.h  graphicalapplication.cpp  graphicalapplication.h  logger.h
client/src/framework/graphics/: graphics.cpp  graphics.h  painter.cpp  painter.h
client/src/framework/platform/: win32window.cpp
client/src/framework/stdext/: hash.h
client/src/framework/util/: rect.h
client/src/protobuf/: CMakeLists.txt  appearances.pb.cc  appearances.pb.h
